--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "description": "",
   "dependencies": {
     "express": "^5.2.1",
-    "pdf-lib": "^1.17.1"
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^2.4.5"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
