--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,8 @@
 		"forceConsistentCasingInFileNames": true
 	},
     "exclude": ["node_modules"],
-	"include": ["src"]
+	"include": ["src"],
+    "references": [
+        { "path": "./test" }
+    ]
 }
