--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "vitest run",
+    "tdd": "vitest watch",
     "dev": "nodemon --watch 'src/**/*.ts' --exec tsx src/index.ts",
     "build": "esbuild src/index.ts --bundle --platform=node --format=esm --packages=external --outfile=dist/index.js",
     "prestart": "npm run build",
